# learnopengl

./: CMakeLists.txt  README.md
shaders/: dirlightmarker.frag  dirlightmarker.vert  grid.frag  pointlightmarker.frag  shader.frag  shader.vert
src/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.hpp  SceneManager.cpp  SceneManager.hpp  Shader.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp  mesh.hpp  model.hpp
src/camera/: camera.h
src/cameras/: Camera.hpp
src/entities/: CubePrimitive.hpp  Entity.cpp  Entity.hpp  Primitive.hpp  SpherePrimitive.cpp  SpherePrimitive.hpp
src/events/: CloseWindowEvent.hpp  Event.hpp  EventDispatcher.hpp  Events.hpp  MouseMovedEvent.hpp  ResizeWindowEvent.hpp
src/framebuffer/: Framebuffer.cpp  Framebuffer.hpp  framebuffer.cpp  framebuffer.h
src/gui/: Console.cpp  Console.hpp  ImGuizmo.h  Window.cpp  Window.hpp
src/gui/Panels/: MaterialPanel.hpp  PropertiesPanel.hpp  SceneHierarchy.hpp  SettingsPanel.hpp  ToolsPanel.hpp
src/lights/: DirectionalLight.hpp  Light.cpp  Light.hpp  PointLight.hpp
src/materials/: Material.cpp  Material.hpp  PhongMaterial.hpp
src/openglcontext/: opengl_context.cpp  opengl_context.hpp
src/renderers/: MaterialPreview.cpp  MaterialPreview.hpp  OpenGlRenderer.cpp  OpenGlRenderer.hpp
